💄 Fix Footer spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -19,7 +19,7 @@
 }
 
 .song .songInfo {
-  margin-left: 12px;
+  margin-left: 16px;
 }
 
 .songInfo .name {
